js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype/constructor.js
assert
.
sameValue
(
TypeError
.
prototype
.
constructor
TypeError
)
;
verifyProperty
(
TypeError
.
prototype
"
constructor
"
{
writable
:
true
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
